--- a/BARRY Cards/assets/style/style.css
+++ b/BARRY Cards/assets/style/style.css
@@ -18,18 +18,30 @@
     color: var(--white)
   }
 
+  .grid-col-span-2 {
+    grid-column: span 2;
+  }
+
   .testimonial-grid {
     display: grid;
     gap: 1rem;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
 
     padding-block: 2rem;
     width: min(95%, 70rem);
+    margin: 1rem;
   }
   
   .testimonial {
     border-radius: .5rem;
     padding: 2rem;
+    min-width: 300px;
+    min-height: 300px;
+  }
+
+  .testimonial:last-child {
+    grid-column-start: 4;
+    grid-row: 1 / span 2;
   }
   
   div.user {
@@ -73,5 +85,9 @@
   }
 
   #gene {
-    background: linear-gradient(90deg, rgb(173, 51, 20) 70%, rgb(37, 7, 7) 110%);
+    background: linear-gradient(90deg, rgb(173, 51, 20) 70%, rgb(73, 1, 1) 110%);
+  }
+
+  #cristobal {
+    background: linear-gradient(90deg, rgb(0, 12, 82) 70%, rgb(7, 0, 32) 110%);
   }
